@@ -1,0 +1,567 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE TS>
+<TS version="2.0" language="fr_FR">
+<context>
+    <name>design/ezwebin/user/edit</name>
+    <message>
+        <source>User profile</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Profil utilisateur</translation>
+    </message>
+    <message>
+        <source>Username</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Nom de l&apos;utilisateur</translation>
+    </message>
+    <message>
+        <source>Email</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>E-mail</translation>
+    </message>
+    <message>
+        <source>Name</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Nom</translation>
+    </message>
+    <message>
+        <source>My drafts</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Mes brouillons</translation>
+    </message>
+    <message>
+        <source>My orders</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Mes ordres</translation>
+    </message>
+    <message>
+        <source>My pending items</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Mes éléments en attente</translation>
+    </message>
+    <message>
+        <source>My notification settings</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Mes paramètres de notification</translation>
+    </message>
+    <message>
+        <source>My wish list</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Ma liste de souhaits</translation>
+    </message>
+    <message>
+        <source>Edit profile</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Éditer mon profil</translation>
+    </message>
+    <message>
+        <source>Change password</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Modifier mon mot de passe</translation>
+    </message>
+</context>
+<context>
+    <name>ezcomments/comment/action</name>
+    <message>
+        <source>Back</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Retour</translation>
+    </message>
+    <message>
+        <source>Delete</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Supprimer</translation>
+    </message>
+    <message>
+        <source>Cancel</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Annuler</translation>
+    </message>
+    <message>
+        <source>Update comment</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Mettre à jour le commentaire</translation>
+    </message>
+</context>
+<context>
+    <name>ezcomments/comment/activate</name>
+    <message>
+        <source>There is no subscription with the hash string!</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation type="unfinished">Il n&apos;y a aucun abonnement à ????</translation>
+    </message>
+    <message>
+        <source>The subscriber is disabled!</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>L&apos;abonné est désactivé !</translation>
+    </message>
+    <message>
+        <source>The subscription is activated!</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>L&apos;abonnement est activé !</translation>
+    </message>
+    <message>
+        <source>Go to settings</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Aller aux paramètres</translation>
+    </message>
+    <message>
+        <source>Activate subscription</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Activer l&apos;abonnement</translation>
+    </message>
+</context>
+<context>
+    <name>ezcomments/comment/activationnotification</name>
+    <message>
+        <source>Dear %email,</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation type="unfinished">Cher %email,</translation>
+    </message>
+    <message>
+        <source>You have subscribed to comment update on content. Before you start the service, you need to confirm the subscription.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Vous vous êtes abonné à la mise à jour des commentaires. Avant de démarrer le service vous devez confirmer votre abonnement.</translation>
+    </message>
+    <message>
+        <source>Please click the link to activate.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Veuillez cliquer sur ce lien pour activer votre abonnement.</translation>
+    </message>
+    <message>
+        <source>The activation will expire after %expiry_days days.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>L&apos;activation expirera dans %expiry_days jours.</translation>
+    </message>
+    <message>
+        <source>The activation will expire after %expiry_hours hours.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>L&apos;activation expirera dans %expiry_hours heures.</translation>
+    </message>
+    <message>
+        <source>If you do not want to receive the subscription email, ignore this email.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Si vous ne souhaitez pas recevoir le mail d&apos;abonnement ignorez ce mail.</translation>
+    </message>
+    <message>
+        <source>You can go to your setting page to manage your subscription.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Vous pouvez aller sur votre page de paramètre pour gérer votre abonnement.</translation>
+    </message>
+    <message>
+        <source>Activate your subscription</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Activez votre abonnement</translation>
+    </message>
+    <message>
+        <source>posted a new comment on</source>
+        <translatorcomment>PBOYER - Contenu du mail de notification d&apos;un nouveau message</translatorcomment>
+        <translation>a posté un nouveau commentaire au bas de l&apos;article</translation>
+    </message>
+    <message>
+        <source>Comment summary</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Résumé du commentaire</translation>
+    </message>
+    <message>
+        <source>To reply the content, please visit</source>
+        <translatorcomment>PBOYER - Contenu du mail de notification d&apos;un nouveau message</translatorcomment>
+        <translation>Pour répondre, visitez la page suivante:</translation>
+    </message>
+    <message>
+        <source>For setting your subscription, please visit</source>
+        <translatorcomment>PBOYER - Contenu du mail de notification d&apos;un nouveau message</translatorcomment>
+        <translation>Pour paramettrer votre abonnement ou vous désabonner cliquez sur ce lien:</translation>
+    </message>
+    <message>
+        <source>(You need to login)</source>
+        <translatorcomment>PBOYER - Contenu du mail de notification d&apos;un nouveau message</translatorcomment>
+        <translation>(Vous devez être connecté)</translation>
+    </message>
+    <message>
+        <source>There are updates from</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Il y a des mises à jours depuis</translation>
+    </message>
+    <message>
+        <source>Hi,</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Bonjour,</translation>
+    </message>
+</context>
+<context>
+    <name>ezcomments/comment/add</name>
+    <message>
+        <source>Not a valid email address.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Une adresse mail invalide.</translation>
+    </message>
+    <message>
+        <source>%1 is missing.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>%1 est absent.</translation>
+    </message>
+    <message>
+        <source>The field [%1] is empty.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Le champ [%1] est vide.</translation>
+    </message>
+    <message>
+        <source>Your comment has been posted.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Votre commentaire a bien été posté.</translation>
+    </message>
+    <message>
+        <source>Add comment</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Ajouter un comentaire</translation>
+    </message>
+    <message>
+        <source>Commenting has been turned off for this content.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Il n&apos;est plus possible de poster un commentaire sous cet article.</translation>
+    </message>
+    <message>
+        <source>You have already subscribed to comment updates on this content.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Vous êtes déjà abonné à la mise à jour de commentaires pour cet article.</translation>
+    </message>
+    <message>
+        <source>You will receive comment updates on the content.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Vous recevrez les mises à jours de commentaires de cet article.</translation>
+    </message>
+    <message>
+        <source>A confirmation email has been sent to your email address. You will receive comment updates after confirmation.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Un mail de confirmation a été envoyé à votre adresse mail. Vous recevrez les mises à jour des commentaires après confirmation.</translation>
+    </message>
+    <message>
+        <source>You should not access this view directly.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Vous ne devez pas accéder directement à cette vue.</translation>
+    </message>
+</context>
+<context>
+    <name>ezcomments/comment/add/form</name>
+    <message>
+        <source>Post comment</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Poster un commentaire</translation>
+    </message>
+    <message>
+        <source>Title:</source>
+        <translatorcomment>PBOYER - Champ du formulaire</translatorcomment>
+        <translation>Titre:</translation>
+    </message>
+    <message>
+        <source>Name:</source>
+        <translatorcomment>PBOYER - Champ du formulaire</translatorcomment>
+        <translation>Nom/Prénom:</translation>
+    </message>
+    <message>
+        <source>Website:</source>
+        <translatorcomment>PBOYER - Champ du formulaire</translatorcomment>
+        <translation>Site web:</translation>
+    </message>
+    <message>
+        <source>Email:</source>
+        <translatorcomment>PBOYER - Champ du formulaire</translatorcomment>
+        <translation>Email:</translation>
+    </message>
+    <message>
+        <source>(The email address will not be shown)</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>(l&apos;adresse mail ne sera pas affichée)</translation>
+    </message>
+    <message>
+        <source>Content:</source>
+        <translatorcomment>PBOYER - Champ du formulaire</translatorcomment>
+        <translation>Message:</translation>
+    </message>
+    <message>
+        <source>Notify me of new comments</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Informez-moi des nouveaux commentaires</translation>
+    </message>
+    <message>
+        <source>Remember me</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Se souvenir de moi</translation>
+    </message>
+    <message>
+        <source>Add comment</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Ajouter un commentaire</translation>
+    </message>
+    <message>
+        <source>Reset form</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Réinitialiser le formulaire</translation>
+    </message>
+    <message>
+        <source>Notified of new comments</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation type="unfinished">Me tenir informé des nouveaux commentaires</translation>
+    </message>
+    <message>
+        <source>There is a problem with your comment form </source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Il y a un problème avec le formulaire de commentaire</translation>
+    </message>
+    <message>
+        <source>Enter both words below, with or without a space.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Recopiez les deux mots avec ou sans espace.</translation>
+    </message>
+    <message>
+        <source>The letters are not case-sensitive.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Le système est insensible à la casse (majuscules/minuscules).</translation>
+    </message>
+    <message>
+        <source>Can&apos;t read this?</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Les 2 mots sont illisibles ?</translation>
+    </message>
+    <message>
+        <source>Try another</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Essayez-en d&apos;autres !</translation>
+    </message>
+    <message>
+        <source>Security text:</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Test anti-spam:</translation>
+    </message>
+</context>
+<context>
+    <name>ezcomments/comment/delete</name>
+    <message>
+        <source>Delete comment?</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Voulez-vous vraiment supprimer le commantaire ?</translation>
+    </message>
+    <message>
+        <source>Deleting failed!</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>La suppression a échoué !</translation>
+    </message>
+    <message>
+        <source>You don&apos;t have access to delete comment or the comment is hidden!</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Vous n&apos;avez pas les droits nécessaires pour supprimer le commentaire !</translation>
+    </message>
+    <message>
+        <source>Delete comment</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Supprimer le commentaire</translation>
+    </message>
+</context>
+<context>
+    <name>ezcomments/comment/edit</name>
+    <message>
+        <source>You don&apos;t have access to edit.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Vous n&apos;avez pas les droits nécessaires pour éditer cet objet.</translation>
+    </message>
+    <message>
+        <source>Edit comment</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Éditer le commentaire</translation>
+    </message>
+    <message>
+        <source>Updating failed.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>La lise à jour a échoué.</translation>
+    </message>
+</context>
+<context>
+    <name>ezcomments/comment/notification</name>
+    <message>
+        <source>New comment</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Nouveau commentaire</translation>
+    </message>
+</context>
+<context>
+    <name>ezcomments/comment/setting</name>
+    <message>
+        <source>The subscriber doesn&apos;t exist.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>L&apos;abonné n&apos;existe pas.</translation>
+    </message>
+    <message>
+        <source>You are not subscribing to any content.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Vous n&apos;êtes abonné à aucun contenu.</translation>
+    </message>
+    <message>
+        <source>You have updated comment settings.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Vous avez mis à jour vos paramètres de commentaires.</translation>
+    </message>
+    <message>
+        <source>OK</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>OK</translation>
+    </message>
+    <message>
+        <source>Select</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Sélectionner</translation>
+    </message>
+    <message>
+        <source>Content</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Contenu</translation>
+    </message>
+    <message>
+        <source>Subscription started</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation type="unfinished">L&apos;abonnement a débuté</translation>
+    </message>
+    <message>
+        <source>Subscribed</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Abonné</translation>
+    </message>
+    <message>
+        <source>Save</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Sauvegarder</translation>
+    </message>
+    <message>
+        <source>Reset</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Réinitialiser</translation>
+    </message>
+    <message>
+        <source>Comment settings</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Paramètres de commentaire</translation>
+    </message>
+</context>
+<context>
+    <name>ezcomments/comment/view</name>
+    <message>
+        <source>wrote:</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>a écrit le </translation>
+    </message>
+    <message>
+        <source>Edit</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Éditer</translation>
+    </message>
+    <message>
+        <source>Delete</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Supprimer</translation>
+    </message>
+    <message>
+        <source>There is no comment.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Il n&apos;y a aucun commentaire.</translation>
+    </message>
+    <message>
+        <source>You don&apos;t have access to view comment.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Vous n&apos;avez pas les droits nécessaires pour voir les commentaires.</translation>
+    </message>
+    <message>
+        <source>You don&apos;t have access to post comment.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Vous n&apos;avez pas les droits nécessaires pour poster un commentaire.</translation>
+    </message>
+    <message>
+        <source>View all %total_count comments</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Voir les %total_count commentaires</translation>
+    </message>
+    <message>
+        <source>Total %total_count comments</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Nombre total de commentaires: %total_count</translation>
+    </message>
+    <message>
+        <source>The page parameter is not a number.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation type="unfinished">Le paramètre de page n&apos;est pas un nombre.</translation>
+    </message>
+    <message>
+        <source>The page parameter can&apos;t be minus.</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation type="unfinished">Le paramètre de page ne peut être inférieur.</translation>
+    </message>
+    <message>
+        <source>Comment/View</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation type="unfinished">Commentaire/Vue</translation>
+    </message>
+</context>
+<context>
+    <name>ezcomments/comment/view/action</name>
+    <message>
+        <source>Back</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Retour</translation>
+    </message>
+</context>
+<context>
+    <name>ezcomments/comment/view/page</name>
+    <message>
+        <source>%current_page/%total_page</source>
+        <translation></translation>
+    </message>
+    <message>
+        <source>Previous page</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Page précédente</translation>
+    </message>
+    <message>
+        <source>Next page</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Page suivante</translation>
+    </message>
+    <message>
+        <source>Total comments:</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Nombre de commentaires:</translation>
+    </message>
+    <message>
+        <source>Pages:</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Pages:</translation>
+    </message>
+</context>
+<context>
+    <name>ezcomments/datatype</name>
+    <message>
+        <source>Comments</source>
+        <comment>Datatype name</comment>
+        <translatorcomment>PBOYER - nom du datatype</translatorcomment>
+        <translation>Commentaires</translation>
+    </message>
+</context>
+<context>
+    <name>ezcomments/datatype/edit</name>
+    <message>
+        <source>Show comments</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Afficher les commentaires</translation>
+    </message>
+    <message>
+        <source>Enable commenting</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation>Autoriser les commentaires</translation>
+    </message>
+</context>
+<context>
+    <name>ezcomments/ezwebin/user/edit</name>
+    <message>
+        <source>My comment settings</source>
+        <translatorcomment>PBOYER</translatorcomment>
+        <translation type="unfinished">Mes paramètres de commentaire</translation>
+    </message>
+</context>
+</TS>
